sumo/tests/traci/PositionConversion/InvalidLaneId/testclient_out.traci
TraCITestClient output file. Date: Tue Mar 10 14:57:18 2009


-> Command sent: <SimulationStep>:
  TargetTime=1.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <PositionConversion>:
 DestPosition-RoadMap: roadId=e_m0 pos=0.00 laneId=100 posId=3
.. Answered with error to command (113), [description: No lane existing with such id on the given road]

-> Command sent: <SimulationStep>:
  TargetTime=2.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
